--- a/P2FixAnAppDotNetCode/Resources/Controllers/OrderController.en.resx
+++ b/P2FixAnAppDotNetCode/Resources/Controllers/OrderController.en.resx
@@ -120,4 +120,7 @@
   <data name="CartEmpty" xml:space="preserve">
     <value>Sorry, your cart is empty !</value>
   </data>
+  <data name="ConfirmationMessage" xml:space="preserve">
+    <value>Order completed successfully!</value>
+  </data>
 </root>
