--- a/P2FixAnAppDotNetCode/Resources/Controllers/OrderController.fr.resx
+++ b/P2FixAnAppDotNetCode/Resources/Controllers/OrderController.fr.resx
@@ -120,4 +120,7 @@
   <data name="CartEmpty" xml:space="preserve">
     <value>Désolé votre panier est vide !</value>
   </data>
+  <data name="ConfirmationMessage" xml:space="preserve">
+    <value>Commande passée avec succès !</value>
+  </data>
 </root>
